# HPC-Knowledge-Library

./: .gitmodules  README.md
2 Courses/2.1 HPC/: README.md
2 Courses/2.2 DL/: README.md
2 Courses/2.3 ML/: README.md
3 Blogs/3.2 DL/: README.md
4 Tutorials/: README.md
Deng_Hao/reading/: README.md  init.md
Deng_Hao/week 4/: Project_Repo_URL.txt
Deng_Hao/week2/: compare_self_increment.cpp
Deng_Hao/week3/: CMakeLists.txt  compile instruction.txt
Deng_Hao/week3/include/: matplotlibcpp.h
Deng_Hao/week3/src/: Run_and_Plot.cpp  Tensor.h  Tensor1D.h  Tensor4D.h  User_Specify_Convolution.cpp  compare_increment.cpp  main.cpp  matrix_optimization.cpp  test_plot.cpp
JX-Ma/: README.md
JX-Ma/week-2/: cnn.cpp  直接卷积结果分析.md
JX-Ma/week-3/: Week3-小作业.md  高性能零内存开销直接卷积.md
JX-Ma/week-4/: 矩阵优化性能测试.md
JX-Ma/week-5/: week-5.md
JX-Ma/week-9/: 1. Docker desk-top安装 windows.md
JX-Ma/研一下/: 优化 GPU 上深度卷积神经网络的内存效率.md
JX-Ma/研二上/: README.md
JX-Ma/研二下/: README.md
Others/: README.md
XP-Zhang/: DAY2-论文观后感.md  基于张量代数的卷积神经网络性能优化_笔记.md
XP-Zhang/week10/: O2-fipa-cp-clone下的汇编代码.txt  O2下的汇编代码.txt  data_blas.xlsx  data_blas_weTensor.xlsx  im2win_gflops.txt  memory_GPU.xlsx  自己编译的mkl版本libtroch信息.txt  自己编译的openblas版本libtroch信息.txt
XP-Zhang/week11/: im2col_openmp.txt  im2win_gflops.txt  memory_GPU.xlsx
XP-Zhang/week12/: im2win_gflops.xlsx
XP-Zhang/week14/: im2col_glops.txt
XP-Zhang/week15/: im2col_glops.txt
XP-Zhang/week16/: im2col_glops.txt
XP-Zhang/week17/: im2col_glops.xlsx
XP-Zhang/week19/: Im2win示意图.docx  im2col_memory.xlsx
XP-Zhang/week2/: week2.c++  (+1 more)
(+441 files in other folders)
